# kokoro

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  ROADMAP.md  kokoro-mail.code-workspace
app/: index.html  package.json
app/public/: manifest.json
app/scripts/: build-sidecar.ts
app/src/: routeTree.gen.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: gmail.rs  lib.rs
app/src/components/: AppSidebar.tsx  AppTopbar.tsx  FileRowContextMenu.tsx  Header.tsx  MailConnectSetup.tsx  SynthesisLock.tsx  UpdateButton.tsx
app/src/components/ui/: sidebar.tsx
app/src/hooks/: use-shift-held.ts  use-speech-stream-generation.ts
app/src/lib/: epub-speech.ts  tts-text.test.ts  tts-text.ts
app/src/lib/gmail/: client.ts  decode.test.ts  decode.ts  index.ts  oauth-constants.ts  types.ts
app/src/routes/: __root.tsx  epub.tsx  index.tsx  library.tsx  mail.tsx  troubleshoot.tsx
app/src/routes/speech/: optimize.tsx
app/src/stores/: epub-store.ts  gmail-credentials-store.ts  playground-store.ts  settings-store.ts  synthesis-lock-store.ts
macos/: Package.swift
macos/Kokoro.app/Contents/: Info.plist
macos/Kokoro.app/Contents/MacOS/: Kokoro
macos/Kokoro.app/Contents/_CodeSignature/: CodeResources
macos/Scripts/: compile_and_run.sh  package_app.sh
macos/Sources/Kokoro/: KokoroApp.swift
macos/Sources/Kokoro/Core/: KokoPaths.swift  (+1 more)
web/: .prettierignore  README.md  eslint.config.js  index.html  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
web/src/: App.tsx  index.css  main.tsx
